<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="community_based_early_identification_of_developmental_disability_program">community based early identification of developmental disability program</string>
    <string name="martial_fit_programme_integrated_martial_arrt_programme">martial fit programme (integrated martial arrt programme)</string>
    <string name="aqua_fit_programme">aqua fit programme</string>
    <string name="ragamrtham">ragamrtham</string>
    <string name="community_based_learning_disability_management_clinics">community based learning disability management clinics</string>
    <string name="life_skill_training_programe_for_adolescence_girls_with_intellectual_disability">life skill training programe for adolescence girls with intellectual disability</string>
    <string name="introduction_about_center">Introduction about center</string>
    <string name="services">Services</string>
    <string name="special_units">Special units</string>
    <string name="best_practices_programs">Best practices programs</string>
    <string name="introduction_about_center_2">introduction about center</string>
    <string name="service_availability">Service availability</string>
    <string name="livelihood_based_vocation_rehabilition_program">livelihood based vocation rehabilition program</string>
    <string name="intro_about_training_programe">intro about training programe</string>
    <string name="up_coming_training_programe">up coming training programe</string>
    <string name="report_of_training_programe">report of training programe</string>
    <string name="introduction_about_research_program">introduction about research program</string>
    <string name="ongoing_research_program">ongoing research program</string>
    <string name="pgdrp">pgdrp</string>
    <string name="short_term_programmes">short term programmes</string>
    <string name="online_programs">online programs</string>
    <string name="goal_of_the_cdmrp">goal of the cdmrp</string>
    <string name="objectives_of_project">objectives of project</string>
    <string name="vision_and_mission">vision and mission</string>
    <string name="values">values</string>
    <string name="our_activities">our activities</string>
    <string name="target_group_stake_holders">target group/stake holders</string>
    <string name="organization_structure">organization structure</string>
    <string name="our_centers">our centers</string>
    <string name="home_programe_videos">Home training videos</string>
    <string name="therapy_guidelines_for_parents">therapy guidelines for parents</string>
    <string name="worksheet">worksheet</string>
    <string name="our_publications">our publications</string>
    <string name="raheemudheen_p_k">RAHEEMUDHEEN .P.K</string>
    <string name="joint_director_clinical_psychologist">Joint Director(Clinical Psychologist)</string>
    <string name="muhammed_fawz">MUHAMMED FAVAZ</string>
    <string name="case_coordinator">Case Coordinator</string>
    <string name="fathima_kareem">FATHIMA KAREEM</string>
    <string name="disability_management_officer">Disability Management Officer</string>
    <string name="learning_disability_task">Learning Disability Task</string>
    <string name="attention_building_task">Attention Building Task</string>
    <string name="occupational_therapy">Occupational Therapy</string>
    <string name="physiotherapy_training">Physiotherapy Training</string>
    <string name="speech_therapy_training">Speech Therapy Training</string>
    <string name="behavior_problem">Behaviour Problem</string>
    <string name="daily_living_activities">Daily Living Activities</string>
    <string name="covid_19_parent_guide_to_train_for_differently_abled_childern">Covid 19 Parent Guide to Train for Differently Abled Childern</string>
    <string name="cov1">കോവിഡ് 19 ഭിന്നശേഷി കുട്ടികളുടെ വ്യക്തിശുചിത്വം CDMRP തയ്യാറാക്കിയ മാർഗരേഖ അദ്ധ്യായം 1</string>
    <string name="cov2">കോവിഡ് 19 ഭിന്നശേഷി കുട്ടികളുടെ ഉത്തരവാദിത്തങ്ങൾ CDMRP തയ്യാറാക്കിയ മാർഗരേഖ അദ്ധ്യായം 2</string>
    <string name="cov3">കോവിഡ് 19 ഭിന്നശേഷി കുട്ടികളുടെ ഭക്ഷണക്രമവും ആരോഗ്യവും രക്ഷിതാക്കൾക്കുള്ള മാർഗരേഖ അദ്ധ്യായം 3</string>
    <string name="dl1">ഭിന്നശേഷി കുട്ടികളിൽ ദിനചര്യപരിശീലനം - 1 (ബ്രഷിങ് 1)</string>
    <string name="dl2">ഭിന്നശേഷിക്കാരിലെ വ്യക്തിത്വ ശുചിത്വം പരിശീലനം 1 (ബ്രഷിങ് 2)</string>
    <string name="dl3">ഭിന്നശേഷിക്കാരിലെ വ്യക്തി ശുചിത്വ പരിശീലനം 2 മുഖം വൃത്തിയാക്കൽ</string>
    <string name="d4">ഭിന്നശേഷിക്കാരായ കുട്ടികളെ ചെരുപ്പ് ഷൂ സ്വയം ധരിക്കാൻ എങ്ങനെ പ്രാപ്‌തരാക്കാം</string>
    <string name="dl5">ഭിന്നശേഷി കുട്ടികൾക്ക് സ്വയം ഭക്ഷണം കഴിക്കാൻ ഉള്ള പരിശീലനം</string>
    <string name="dl6">ഭിന്നശേഷി കുട്ടികളിലെ വസ്ത്രധാരണം പരിശീലനം</string>
    <string name="beh1">സ്വഭാവ പ്രശ്നങ്ങൾ കണ്ടെത്തലും പരിഹാരവും</string>
    <string name="sp1">സംസാര വൈകല്യ പരിശീലനം 1</string>
    <string name="sp2">സംസാര വൈകല്യ പരിശീലനം 2</string>
    <string name="sp3">സംസാര വൈകല്യ പരിശീലനം 3</string>
    <string name="sp4">സംസാര വൈകല്യ പരിശീലനം 4</string>
    <string name="sp5">സംസാര വൈകല്യ പരിശീലനം 5 - കുട്ടിയെ പഠിപ്പിക്കേണ്ട വാക്കുകൾ തിരഞ്ഞെടുക്കാനുള്ള വിധം</string>
    <string name="sp6">സംസാര വൈകല്യ പരിശീലനം 6 - കുട്ടികളോട് സംസാരിക്കുമ്പോൾ രക്ഷിതാക്കൾ ശ്രദ്ധിക്കേണ്ടത് എന്തെല്ലാം</string>
    <string name="phy1">ഭിന്നശേഷിക്കാരിലെ ശാരീരിക പരിശീലനം അധ്യായം 1</string>
    <string name="phy2">ഫിസിയോതെറാപ്പി പരിശീലനം</string>
    <string name="phy3">ഭിന്നശേഷിക്കാരിലെ ശാരീരിക പരിശീലനം അധ്യായം 2</string>
    <string name="phy4">ഭിന്നശേഷിക്കാരിലെ ശാരീരിക പരിശീലനം അധ്യായം 3</string>
    <string name="phy5">ഭിന്നശേഷിക്കാരിലെ ശാരീരിക പരിശീലനം അധ്യായം 4</string>
    <string name="phy6">ഫിസിയോതെറാപ്പി പരിശീലനം (Home based Relaxation Techniques)</string>
    <string name="phy7">Fine Motor skill training , chapter -1</string>
    <string name="phy8">Fine Motor skill training , chapter -2</string>
    <string name="phy9">Fine Motor skill training , chapter -3</string>
    <string name="phy10">Share Concept training</string>
    <string name="occ1">Occupational therapy training , model chapter -1</string>
    <string name="adhd_management_attention_building_task">ADHD Management-Attention Building Task</string>
    <string name="at1">കളികളിലൂടെ ശ്രദ്ധ കൂട്ടം അധ്യായം 1</string>
    <string name="at2">ഭിന്നശേഷി കുട്ടികളിലെ ശ്രദ്ധ വളർത്താൻ ശ്രദ്ധിക്കേണ്ടത് അധ്യായം 2</string>
    <string name="at3">കുട്ടികളിൽ ശ്രദ്ധ വളർത്താൻ മാർഗങ്ങൾ അധ്യായം 3</string>
    <string name="at4">ശ്രദ്ധ വളർത്തൽ എന്ത് എങ്ങനെ അധ്യായം 4</string>
    <string name="at5">ഭിന്നശേഷിക്കാരിലെ ശ്രദ്ധ വളർത്താൻ അധ്യായം 5</string>
    <string name="at6">ശ്രദ്ധ കൂട്ടാൻ നുറുങ്ങു വഴികൾ അദ്ധ്യായം 6</string>
    <string name="at7">ശ്രദ്ധ വളർത്താൻ എളുപ്പവഴികൾ അദ്ധ്യായം-7</string>
    <string name="at8">ശ്രദ്ധ കൂട്ടാൻ നുറുങ്ങു വഴികൾ അദ്ധ്യായം 8</string>
    <string name="at9">രസകരമായി എങ്ങനെ കുട്ടികളിൽ അറിവ് വളർത്താം</string>
    <string name="l1">പഠന വൈകല്യം പരിഹാരമാർഗ്ഗങ്ങളും പരിശീലനവും അദ്ധ്യായം-1, Series-1</string>
    <string name="l2">പഠനവൈകല്യ പരിശീലനം ഇംഗ്ലീഷ് അക്ഷര പഠനം</string>
    <string name="l3">പഠന വൈകല്യം പരിഹാരമാർഗ്ഗങ്ങളും പരിശീലനവും അദ്ധ്യായം-1, Series-2</string>
    <string name="l4">പഠന വൈകല്യം പരിഹാരമാർഗ്ഗങ്ങളും പരിശീലനവും അദ്ധ്യായം-1, Series-3</string>
    <string name="l5">പഠന വൈകല്യം പരിഹാരമാർഗ്ഗങ്ങളും പരിശീലനവും അദ്ധ്യായം-1, Series-4</string>
    <string name="office_assistant_cum_computer_operator_and_clinical_attendent">office assistant cum computer operator and clinical attendant</string>
    <string name="special_educators">special educators</string>
    <string name="speech_language_pathologist_and_audiolist">speech language pathologist and audiolist</string>
    <string name="physiotherapist">physiotherapist</string>
    <string name="occupational_therapist">occupational therapist</string>
    <string name="case_coordinators_and_liaison_officres">case coordinators and liaison officers</string>
    <string name="developmental_psychologists">Developmental psychotherapists</string>
    <string name="disability_management_officers">disability management officers</string>
    <string name="directors">DIRECTORS</string>
    <string name="our_staff">Our Staff</string>
    <string name="prof_dr_k_manikandan">Prof.(Dr).K.Manikandan</string>
    <string name="clinical_psychologist">(Clinical Psychologist)</string>
    <string name="beena_george">Beena George</string>
    <string name="m_phil_clinical_psycology">(M.Phil.Clinical Psychology)</string>
    <string name="dr_noufal_t_h">Dr.Noufal T H</string>
    <string name="m_phil_phd_clinical_psycology">(M.Phil,Phd,Clinical Psychology)</string>
    <string name="developmental_psychotherapists">DEVELOPMENTAL PSYCHOTHERAPISTS</string>
    <string name="clinical_psychologist1">(clinical psychologist)</string>
    <string name="sara_renni">sara renni</string>
    <string name="m_phil_clinical_psychology">(M.Phil. Clinical Psychology)</string>
    <string name="manju_t_k">Manju T.K</string>
    <string name="athira_nakulan">Athira Nakulan</string>
    <string name="chandana">Chandana Gopan</string>
    <string name="muhammed_shareef_v_p">Muhammed Shareef V.P</string>
    <string name="bot_mot"><![CDATA[(BOT & MOT)]]></string>
    <string name="surabhi_k">Surabhi K</string>
    <string name="ajo_sunny">Ajo Sunny</string>
    <string name="bot">(BOT)</string>
    <string name="denny_davis">Denny Davis</string>
    <string name="bptmpt"><![CDATA[(BPT & MPT)]]></string>
    <string name="bpt">(BPT)</string>
    <string name="musaina_p">Musaina P</string>
    <string name="cifin_p_joseph">cifin P.Joseph</string>
    <string name="nissy_mariam_varghese">Nissy Mariam Varghese</string>
    <string name="baslp">(BASLP)</string>
    <string name="ayisha_linsha">Ayisha Linsha</string>
    <string name="baslp_maslp">(BASLP,MASLP)</string>
    <string name="speech_language_pathologist">Speech language pathologist</string>
    <string name="and_audiologist">AND Audiologist</string>
    <string name="sujitha_p_s">Sujitha P.S</string>
    <string name="baslp_msc_slp"><![CDATA[(BASLP & Msc SLP)]]></string>
    <string name="hena_p">Hena.P</string>
    <string name="aswathi_n_v">Aswathi N .V</string>
    <string name="neethi_narendhran">Neethi Narendhran</string>
    <string name="ded_se">(Ded.SE)</string>
    <string name="b_ed_se">(B.ed. SE)</string>
    <string name="adamsada_c_m">Adamsada C.M</string>
    <string name="athira_p_p">Athira P.P</string>
    <string name="shakeena_v_p">Shakeena V.P</string>
    <string name="shaniba_j_t">Shaniba J.T</string>
    <string name="kunjumol_k_j">Kunjumol K.J</string>
    <string name="treesa_mary_joy">Treesa Mary Joy</string>
    <string name="binduja_v_b">Binduja V.B</string>
    <string name="patient_login">Patient Login</string>
    <string name="moblie_number">Moblie Number</string>
    <string name="date_of_birth_as_per_registration">Date of Birth (As per Registration)</string>
    <string name="new_user_please_register">New User?Please Register</string>
    <string name="community_clinics">Community Clinics</string>
    <string name="malappuram">Malappuram</string>
    <string name="anakkayam">Anakkayam</string>
    <string name="karuvarakund">karuvarakund</string>
    <string name="thanalur">Thanalur</string>
    <string name="select_your_district">Select Your District</string>
    <string name="m1">malappuram</string>
    <string name="kozhikode">KOZHIKODE</string>
    <string name="kannur">KANNUR</string>
    <string name="thiruvagoor">thiruvagoor</string>
    <string name="payyanur">payyanur</string>
    <string name="pariyaram">pariyaram</string>
    <string name="mattanur">mattanur</string>
    <string name="ernholi">eranholi</string>
    <string name="azhikkode">azhikkode</string>
    <string name="anthoor">anthoor</string>
</resources>